// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[E2E] - Michelson compilation (List) List 1`] = `
Array [
  Object {
    "int": "1",
  },
  Object {
    "int": "2",
  },
]
`;

exports[`[E2E] - Michelson compilation (List) Set 1`] = `
Array [
  Object {
    "int": "1",
  },
  Object {
    "int": "2",
  },
]
`;

exports[`[E2E] - Michelson compilation (Option) None 1`] = `
Object {
  "prim": "None",
}
`;

exports[`[E2E] - Michelson compilation (Option) Some 1`] = `
Object {
  "args": Array [
    Object {
      "int": "1",
    },
  ],
  "prim": "Some",
}
`;

exports[`[E2E] - Michelson compilation (Pair) Nested 1`] = `
Object {
  "args": Array [
    Object {
      "int": "1",
    },
    Object {
      "args": Array [
        Object {
          "prim": "False",
        },
        Object {
          "string": "Test",
        },
      ],
      "prim": "Pair",
    },
  ],
  "prim": "Pair",
}
`;

exports[`[E2E] - Michelson compilation (Pair) Simple 1`] = `
Object {
  "args": Array [
    Object {
      "int": "1",
    },
    Object {
      "prim": "Unit",
    },
  ],
  "prim": "Pair",
}
`;

exports[`[E2E] - Michelson compilation (Record) Balanced Layout 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "int": "1",
        },
        Object {
          "int": "2",
        },
      ],
      "prim": "Pair",
    },
    Object {
      "args": Array [
        Object {
          "int": "3",
        },
        Object {
          "int": "4",
        },
      ],
      "prim": "Pair",
    },
  ],
  "prim": "Pair",
}
`;

exports[`[E2E] - Michelson compilation (Record) Left Comb Layout 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "int": "1",
        },
        Object {
          "int": "2",
        },
      ],
      "prim": "Pair",
    },
    Object {
      "int": "3",
    },
  ],
  "prim": "Pair",
}
`;

exports[`[E2E] - Michelson compilation (Record) Right Comb Layout 1`] = `
Object {
  "args": Array [
    Object {
      "int": "1",
    },
    Object {
      "args": Array [
        Object {
          "int": "2",
        },
        Object {
          "int": "3",
        },
      ],
      "prim": "Pair",
    },
  ],
  "prim": "Pair",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Address 1`] = `
Object {
  "string": "tz28QJHLyqvaY2rXAoFZTbxrXeD88NA8wscC",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Bool (False) 1`] = `
Object {
  "prim": "False",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Bool (True) 1`] = `
Object {
  "prim": "True",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Bytes 1`] = `
Object {
  "bytes": "ffff",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) ChainID (bytes) 1`] = `
Object {
  "bytes": "7a06a770",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) ChainID (string) 1`] = `
Object {
  "string": "NetXynUjJNZm7wi",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Int 1`] = `
Object {
  "int": "2",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Mutez 1`] = `
Object {
  "int": "10",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Nat 1`] = `
Object {
  "int": "1",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) String 1`] = `
Object {
  "string": "Hello World",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Timestamp (number) 1`] = `
Object {
  "int": "1571659294",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Timestamp (string) 1`] = `
Object {
  "string": "2019-09-26T10:59:51Z",
}
`;

exports[`[E2E] - Michelson compilation (Singleton Literals) Unit 1`] = `
Object {
  "prim": "Unit",
}
`;
